Caso de uso tramitar placa nueva terminado